# valida_diploma_xml

./: .dockerignore  Dockerfile  Portal de Conformidade do Diploma - Verificar a conformidade do Diploma.html  README.md  conformidade_diploma.html  diploma.xml:Zone.Identifier  hora.py  main-chrome.py  main.py  pyproject.toml  send.py
app/: main.py
app/dependencies/: valida_mec.py
app/middleware/: middleware.py
app/routers/: routes.py
app/schemas/: upload_file.py
